# storage/api-docs/api-docs.json
@@ -1,17 +1,30 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Tasks API ",
+        "title": "API de Gestão de Tarefas",
+        "description": "Documentação da API de Gestão de Tarefas com Laravel Sanctum",
+        "contact": {
+            "email": "seu_email@example.com"
+        },
         "version": "1.0.0"
     },
+    "servers": [
+        {
+            "url": "http://127.0.0.1:8000/api/",
+            "description": "Servidor da API"
+        },
+        {
+            "url": "/api"
+        }
+    ],
     "paths": {
-        "/api/user/register'": {
+        "/user/register": {
             "post": {
                 "tags": [
                     "Autenticação"
                 ],
                 "summary": "Registra um novo usuário",
-                "operationId": "101c0f83ebd9f96c55106a44eb32c11c",
+                "operationId": "1f06d3130b898773356c61c7e17c857a",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -58,13 +71,13 @@
                 }
             }
         },
-        "/api/user/login": {
+        "/user/login": {
             "post": {
                 "tags": [
                     "Autenticação"
                 ],
                 "summary": "Autentica um usuário e retorna o token JWT",
-                "operationId": "fa481c4ebcab70051c9df8d0624a47e8",
+                "operationId": "72fe6885a7a3aa143f006083634ba4cc",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -100,49 +113,13 @@
                 }
             }
         },
-        "/api/forgot-password": {
-            "post": {
-                "tags": [
-                    "Autenticação"
-                ],
-                "summary": "Envia link de recuperação de senha",
-                "operationId": "7af8817e88ba5874543ff38f188248f1",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "email"
-                                ],
-                                "properties": {
-                                    "email": {
-                                        "type": "string",
-                                        "example": "daniel@email.com"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Link de redefinição enviado com sucesso"
-                    },
-                    "500": {
-                        "description": "Falha ao enviar o link de redefinição"
-                    }
-                }
-            }
-        },
-        "/api/user/logout": {
+        "/user/logout": {
             "post": {
                 "tags": [
                     "Autenticação"
                 ],
                 "summary": "Termina a sessão do usuário autenticado",
-                "operationId": "1450bb66c6720716bd057bef3d23211a",
+                "operationId": "0220c7a237541f2dfc8ac465999dbfe6",
                 "responses": {
                     "200": {
                         "description": "Logout bem-sucedido"
@@ -158,13 +135,13 @@
                 ]
             }
         },
-        "/api/tasks": {
+        "/tasks": {
             "get": {
                 "tags": [
-                    "Tarefas"
+                    "Tasks"
                 ],
                 "summary": "Listar todas as tarefas do usuário autenticado",
-                "operationId": "471d938a3bfaeb6fbd981d7c3e2728b0",
+                "operationId": "6a93d54730cde509d735e538ab6800f6",
                 "responses": {
                     "200": {
                         "description": "Lista de tarefas retornada com sucesso"
@@ -181,10 +158,10 @@
             },
             "post": {
                 "tags": [
-                    "Tarefas"
+                    "Tasks"
                 ],
                 "summary": "Criar nova tarefa",
-                "operationId": "f803ebdb2300acdb7e93bbe8d0b9a2e8",
+                "operationId": "9b481c0ed5fdfa1a592d70ba39a348ee",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -228,13 +205,13 @@
                 ]
             }
         },
-        "/api/tasks/{id}": {
+        "/tasks/{id}": {
             "get": {
                 "tags": [
-                    "Tarefas"
+                    "Tasks"
                 ],
                 "summary": "Buscar tarefa pelo ID",
-                "operationId": "90b3cd4d2d4b416dc989d2055dbed06c",
+                "operationId": "fd3677b5b24695d7b801715869b1357c",
                 "parameters": [
                     {
                         "name": "id",
@@ -262,10 +239,10 @@
             },
             "put": {
                 "tags": [
-                    "Tarefas"
+                    "Tasks"
                 ],
                 "summary": "Atualizar uma tarefa existente",
-                "operationId": "1aaf37e74360ef4c10fadaee02ae77fb",
+                "operationId": "85377ff0e935f093dd75ea6886923dbc",
                 "parameters": [
                     {
                         "name": "id",
@@ -325,10 +302,10 @@
             },
             "delete": {
                 "tags": [
-                    "Tarefas"
+                    "Tasks"
                 ],
                 "summary": "Excluir uma tarefa pelo ID",
-                "operationId": "ad582480cd57c2a4e3b6a426943eeca5",
+                "operationId": "5ed5dfd4c645e9398f4282969bfe6478",
                 "parameters": [
                     {
                         "name": "id",
@@ -355,13 +332,13 @@
                 ]
             }
         },
-        "/api/tasks/status/{status}": {
+        "/tasks/status/{status}": {
             "get": {
                 "tags": [
-                    "Tarefas"
+                    "Tasks"
                 ],
                 "summary": "Filtrar tarefas por status",
-                "operationId": "51f4bf61bb476cef3e1de5f3e55cdbcf",
+                "operationId": "84f21b4f75d2afd448278a6fd92a2046",
                 "parameters": [
                     {
                         "name": "status",
@@ -393,16 +370,6 @@
             }
         }
     },
-    "tags": [
-        {
-            "name": "Autenticação",
-            "description": "Endpoints para autenticação de usuários"
-        },
-        {
-            "name": "Tarefas",
-            "description": "Tarefas"
-        }
-    ],
     "components": {
         "securitySchemes": {
             "bearerAuth": {
@@ -412,5 +379,15 @@
                 "in": "header"
             }
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "Autenticação",
+            "description": "Endpoints para autenticação de usuários"
+        },
+        {
+            "name": "Tasks",
+            "description": "Tasks management endpoints"
+        }
+    ]
 }
